Changed some questions for code sandbox

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script src="script.js"></script>
-		<!-- TODO: Change title -->
-		<title>Potatoes</title>
+		<title>Shopping List</title>
 	</head>
 	<body onload="addDate()">
-		<h5 id="header">Tomatoes<span id="date"></span></h1>
+		<!-- TODO: Change title -->
+		<h5 id="header">Tomatoes<span id="date"></span></h5>
 		<div class="main">
 			<ul id="shopping-list"></ul>
 			<div class="add-item">
